# seite2

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/dependencies/: auth.py
backend/src/api/routes/: __init__.py  accounts.py  admin.py  ai.py  auth.py  categories.py  dashboard.py  ocr.py  transactions.py  users.py
backend/src/api/schemas/: __init__.py  account.py  ai.py  auth.py  category.py  common.py  ocr.py  transaction.py  user.py
backend/src/application/use_cases/: __init__.py  account.py  auth.py  user.py
backend/src/core/config/: __init__.py  settings.py
backend/src/core/security/: __init__.py  encryption.py  jwt.py  password.py
backend/src/infrastructure/external_services/ai/: openai_service.py
backend/src/infrastructure/persistence/: database.py
backend/src/infrastructure/persistence/models/: __init__.py  account.py  ai.py  attachment.py  base.py  budget.py  card.py  category.py  goal.py  import_log.py  installment.py  investment.py  log.py  notification.py  ocr.py  tag.py  transaction.py  user.py  webhook.py
backend/src/infrastructure/queue/: __init__.py  tasks.py
docs/: ARCHITECTURE.md  ZIMAOS_GUIDE.md
frontend/: jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/: manifest.json
frontend/public/icons/: .gitkeep
frontend/public/images/: .gitkeep
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/layout/: Navbar.tsx  QueryProvider.tsx  ThemeProvider.tsx
frontend/src/lib/api/: accounts.ts  ai.ts  auth.ts  categories.ts  client.ts  dashboard.ts  index.ts  ocr.ts  transactions.ts
frontend/src/types/: account.ts  category.ts  transaction.ts  user.ts
nginx/conf.d/: default.conf
ssl/: .gitkeep
(+25 files in other folders)
