[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seite2"
version = "1.0.0"
description = "Sistema Financeiro Completo (SaaS)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "cryptography>=43.0.0",
    "argon2-cffi>=23.1.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "minio>=7.2.0",
    "sentry-sdk>=2.17.0",
    "prometheus-client>=0.21.0",
    "python-dotenv>=1.0.0",
    "pillow>=11.0.0",
    "pdf2image>=1.17.0",
    "opencv-python>=4.10.0",
    "numpy>=2.1.0",
    "openai>=1.51.0",
    "pytesseract>=0.3.13",
    "python-telegram-bot>=21.6.0",
    "twilio>=9.4.0",
    "qrcode>=7.4.0",
    "weasyprint>=62.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "ofxparse>=0.21.0",
    "pyshorteners>=1.0.1",
    "websockets>=13.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
    "coverage>=7.6.0",
]
ocr = [
    "paddleocr>=2.8.0",
    "paddlepaddle>=2.6.0",
    "easyocr>=1.7.0",
    "tesseract>=0.1.3",
]
ai = [
    "openai>=1.51.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true